# QuanterSwarm-demo

./: .env.example  LICENSE  Makefile  README.md  codex.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
configs/: app.yaml  evolution.yaml  execution.yaml  logging.yaml  memory.yaml  paper_broker.yaml  portfolio.yaml  ranking.yaml  regimes.yaml  risk.yaml  router.yaml
docs/: ablation-plan.md  agent-graph.md  architecture.md  codex-acceptance-checklist.md  compatibility-layer-retirement.md  design-commit-01-baseline.md  design-commit-02-config-centralization.md  design-commit-03-unified-schemas.md  design-commit-04-exception-system.md  design-commit-05-base-agent.md  design-commit-06-agent-registry.md  design-commit-07-capability-abstractions.md  design-commit-08-agent-executor.md  design-commit-09-router-module.md  design-commit-10-router-explainability.md  design-commit-11-regime-detector.md  design-commit-12-cost-aware-routing.md  design-commit-13-cycle-state.md  design-commit-14-cycle-manager-state-machine.md  design-commit-15-trace-system.md  design-commit-16-data-provider.md  design-commit-17-mock-file-provider.md  design-commit-18-data-snapshot.md  design-commit-19-data-cache.md  design-commit-20-backtest-event-system.md  design-commit-21-portfolio-model.md  design-commit-22-cost-model.md  design-commit-23-walk-forward-engine.md  design-commit-24-backtest-metrics.md  design-commit-25-experiment-configs.md  design-commit-26-baseline-runner.md  design-commit-27-experiment-artifacts.md  design-commit-28-structured-logging.md  design-commit-29-metrics-system.md  design-commit-30-risk-engine.md  evolution-policy.md  example-cycle-output.md  monitoring.md  openclaw-integration.md  output-format.md  (+7 more)
examples/: sample_allocation_packet.json  sample_fundamentals_packet.json  sample_leader_signal_packet.json  sample_market_packet.json  sample_report_packet.json  sample_sentiment_packet.json
experiments/: baseline_fixed_multi_agent.yaml  baseline_single_agent.yaml  routed_ephemeral.yaml  routed_multi_agent.yaml
scripts/: backfill_market_data.py  build_dashboard_data.py  export_metrics.py  generate_sample_report.py  generate_signals.py  run_ablation.py  run_backtest.py  run_daily_research.py  run_local_cycle.py  run_paper_cycle.py  run_replay.py  seed_demo_data.py  serve_dashboard.py  validate_configs.py
tests/: conftest.py  test_agent_capabilities.py  test_agent_executor.py  test_agent_registry.py  test_api_routes.py  test_app_task_flows.py  test_application_use_cases.py  test_backtest.py  test_backtest_costs.py  test_backtest_events.py  test_backtest_metrics.py  test_backtest_models.py  test_base_agent_interface.py  test_breakout_event_leader.py  test_cli.py  test_config_provenance.py  test_configured_experiment_runner.py  test_cycle_manager_fallback.py  test_cycle_report_schema.py  test_cycle_state_machine.py  test_cycle_states.py  test_data_cache.py  test_data_fetch_specialist.py  test_data_provider.py  test_data_quality.py  test_event_impact_analyzer.py  (+42 more)
(+526 files in other folders)
