[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanter-swarm"
version = "0.1.0"
description = "Multi-agent stock analysis and paper-trading orchestration with OpenClaw skill integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "QuanterSwarm" }
]
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.1",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scipy>=1.13.1",
  "httpx>=0.27.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0"
]

[project.scripts]
run_backtest = "quanter_swarm.adapters.cli.run_backtest:main"
generate_signals = "quanter_swarm.adapters.cli.generate_signals:main"
run_replay = "quanter_swarm.adapters.cli.run_replay:main"
build_dashboard_data = "quanter_swarm.adapters.cli.build_dashboard_data:main"
serve_dashboard = "quanter_swarm.adapters.cli.serve_dashboard:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "quanter_swarm.decision.*",
  "quanter_swarm.orchestrator.*",
  "quanter_swarm.execution.*",
  "quanter_swarm.api.*",
  "quanter_swarm.contracts",
]
disallow_untyped_defs = true
